# pysatNASA

./: .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.nc  test_requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: docs.yml  main.yml  pip_rc_install.yml  pysat_rc.yml  python-package.yml
docs/: Makefile  acknowledgements.rst  archival.rst  citing.rst  conf.py  develop_guide.rst  examples.rst  index.rst  installation.rst  migration_guide.rst  overview.rst  requirements.txt  supported_constellations.rst  supported_instruments.rst
docs/examples/: ex_archival.rst  ex_init.rst
pysatNASA/: __init__.py  version.txt
pysatNASA/constellations/: __init__.py  de2.py  icon.py
pysatNASA/instruments/: __init__.py  ace_epam-l2.py  ace_epam.py  ace_epam_l2.py  ace_mag-l2.py  ace_mag.py  ace_mag_l2.py  ace_sis-l2.py  ace_sis.py  ace_sis_l2.py  ace_swepam-l2.py  ace_swepam.py  ace_swepam_l2.py  cnofs_ivm.py  cnofs_plp.py  cnofs_vefi.py  de2_fpi.py  de2_idm.py  de2_lang.py  de2_nacs.py  de2_rpa.py  de2_vefi.py  de2_vefimagb.py  de2_wats.py  dmsp_ssusi.py  formosat1_ivm.py  gold_nmax.py  icon_euv.py  icon_fuv.py  icon_ivm.py  icon_mighti.py  igs_gps.py  iss_fpmu.py  jpl_gps.py  maven_insitu.py  maven_insitu_kp.py  maven_mag.py  maven_ngims.py  maven_sep.py  mgs_mag.py  (+13 more)
pysatNASA/instruments/methods/: __init__.py  _cdf.py  ace.py  cdaweb.py  cnofs.py  de2.py  dmsp.py  formosat.py  general.py  gold.py  gps.py  icon.py  igs.py  iss.py  jhuapl.py  maven.py  mgs.py  mvn.py  omni.py  reach.py  ses14.py  timed.py
pysatNASA/instruments/templates/: template_cdaweb_instrument.py
pysatNASA/tests/: __init__.py  test_instruments.py  test_methods_cdaweb.py  test_methods_dmsp.py  test_methods_jhuapl.py  test_methods_platform.py  test_omni_hro.py
pysatNASA/tests/test_data/: empty.cdf
