[metadata]
name = pysatNASA
version = file: pysatNASA/version.txt
url = https://github.com/pysat/pysatNASA
author = Jeff Klenzing
author_email = jeffrey.klenzing@nasa.gov
description = 'pysat support for NASA Instruments'
keywords =
  pysat
  ionosphere
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  netCDF4
  requests
  beautifulsoup4
  lxml
  cdflib
  numpy
  pandas
  xarray
  pysat

[options.extras_require]
all =
  pysatCDF --no-binary pysatCDF

[coverage:report]
omit =
  */instruments/templates/

[flake8]
max-line-length = 80
ignore =
  D200
  D202
  W503

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    load_options: tests for instruments with additional options
    first: first tests to run
    second: second tests to run
